--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Calculator</h1>
     <form id="add">
       <div class="form-group">
-        <label for="add1"> 1st number:</label>
+        <label for="add1">1st number:</label>
         <input id="add1" class="form-control" type="text">
       </div>
       <div class="form-group">
@@ -20,6 +20,20 @@
         <input id="add2" class="form-control" type="text">
       </div>
       <button type="submit" class="btn">Add!</button>
+    </form>
+    <div id="output">
+    </div>
+
+    <form id="subtract">
+      <div class="form-group">
+        <label for="subtract1">1st number:</label>
+        <input id="subtract1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="subtract2">2nd number:</label>
+        <input id="subtract2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn">Subtract!</button>
     </form>
     <div id="output">
     </div>
